Fix CI headless JavaFX test run and null-list writer test
Co-authored-by: Whytes <14187588+Whytes@users.noreply.github.com>